--- a/index.html
+++ b/index.html
@@ -3,10 +3,9 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Hello World </title>
+    <title>Hello world, hi </title>
   </head>
   <body>
     <b>Hello World</b>
-    <p>Hello World</p>
   </body>
 </html>
